--- a/FormComponents/app/src/main/res/layout/activity_form_component.xml
+++ b/FormComponents/app/src/main/res/layout/activity_form_component.xml
@@ -117,4 +117,32 @@
             android:text="@string/City_text"
             android:layout_gravity="center_horizontal"/>
     </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <Switch
+            android:id="@+id/switchid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.28"
+            android:paddingLeft="10dp"
+
+            android:textAlignment="center"
+            android:textOff="diisbale"
+            android:textOn="enable" />
+
+        <TextView
+            android:id="@+id/switchstatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/switchtext" />
+
+
+    </LinearLayout>
 </LinearLayout>
