--- a/ListViewArrayAdapter/app/src/main/res/layout/activity_listview.xml
+++ b/ListViewArrayAdapter/app/src/main/res/layout/activity_listview.xml
@@ -5,4 +5,5 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/my_selector"
 />
