--- a/TimePicker/app/src/main/res/layout/activity_time_picker.xml
+++ b/TimePicker/app/src/main/res/layout/activity_time_picker.xml
@@ -11,4 +11,10 @@
        android:layout_height="wrap_content"
        android:text="Show Time Dialog"
        android:onClick="ShowTimeDialog"/>
+
+   <Button
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Show Date Dialog"
+       android:onClick="ShowDateDialog"/>
 </LinearLayout>
