--- a/AndroidLocalDB/app/src/main/res/layout/activity_main.xml
+++ b/AndroidLocalDB/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,14 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         />
+
+    <Button
+        android:id="@+id/show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showuser"
+        android:text="Show"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        />
 </LinearLayout>
